--- a/Projects.qmd
+++ b/Projects.qmd
@@ -3,7 +3,7 @@ title: "Projects"
 format: html
 ---
 
-# Life Cycle Assessment for Sustainability analysis on e-readers vs. books (Fall 2024)
+# Life cycle assessment sustainability analysis on e-readers vs. books (Fall 2024)
 
 ```{=html}
 <object data="media/ESS555_FINAL_zoe_gagalis.pdf" type="application/pdf" width="100%" height="100%" style="min-height:100vh;">
@@ -12,13 +12,17 @@ format: html
 </object>
 ```
 
+In this project, I learned how to research and conduct a cradle-to-gate life cycle analysis including uncertainty analysis, using openLCA software.
 
 # Analysis on electric vehicles as a climate solution (Fall 2024)
 
 ```{=html}
-<object data="media/ESS_542_Final.pdf" type="application/pdf" width="100%" height="100%" style="min-height:100vh;">
- <p>It appears you don't have a PDF plugin for this browser.</p>
-  <p>No worries... you can <a href="media/ESS_542_Final.pdf" download>click here to download the PDF file.</a></p>
+<object data="media/ESS_542_Final2.pdf" type="application/pdf" width="100%" height="100%" style="min-height:100vh;">
+  <p>It appears you don't have a PDF plugin for this browser.
+  No worries... you can <a href="media/ESS_542_Final2.pdf" download>click here to download the PDF file.</a></p>
 </object>
 ```
- 
+
+This was a research project aimed at recommendations for climate change mitigation involving transportation.
+
+[Home Page](https://zgagalis.github.io/)
